chore: 누락된 lombok 의존성 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
 	// Lombok
 	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
