--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    // Swagger(OpenAPI)
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1")
 }
 
 tasks.named('test') {
