chore: `manifest`에 프젝 이름 추가

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "Ready Code",
+  "name": "Ready Code: 코드 템플릿 마켓 사이트",
   "icons": [
     {
       "src": "favicon.ico",
