--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^5.0.46",
     "jsdom": "^26.0.0",
     "prettier": "^3.6.2",
     "typescript": "^5.7.2",
