--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
