--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "daisyui": "^5.0.46",
     "jsdom": "^26.0.0",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.6.2",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
