chore: phosphor 아이콘 설치

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "generate-dto": "openapi-typescript http://localhost:8080/v3/api-docs --output src/api/dto.ts"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.121.2",
