--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,11 @@
     "@tanstack/react-router-devtools": "^1.121.2",
     "@tanstack/router-plugin": "^1.128.0",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.6"
   },
