--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 
     // Swagger(OpenAPI)
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1")
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
