--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,14 @@
 name: deploy
-
+on:
+  workflow_dispatch:
+  push:
+    branches: [ infra/epic ]
+    paths:
+      - '.github/workflows/**'
+      - 'infra/**'
 permissions:
   id-token: write
   contents: read
-
-on:
-  workflow_dispatch:
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
