ci: 로컬 호스트에서 헬스체크

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -64,35 +64,44 @@ jobs:
               APP_PATH=/home/ubuntu/app.jar
               S3_BUCKET=readycode-artifacts-gorhkd223-ap-northeast-2
               S3_KEY=server/app.jar
-
+          
               command -v jq >/dev/null 2>&1 || sudo apt-get update -y && sudo apt-get install -y jq
-
+          
               echo Backing up old jar
               if [ -f \"$APP_PATH\" ]; then cp $APP_PATH /home/ubuntu/app-rollback.jar; fi
-
+          
               echo Downloading new jar
               aws s3 cp s3://$S3_BUCKET/$S3_KEY $APP_PATH
-
+          
               echo Restarting service
               sudo systemctl restart $APP_NAME
-
-              echo Health check
-              for i in {1..12}; do
+          
+              echo Health check - waiting for service to be ready
+              for i in {1..24}; do
                 sleep 5
-                STATUS=$(curl -s http://127.0.0.1:8080/actuator/health | jq -r .status || true)
-                if [ \"$STATUS\" = \"UP\" ]; then
-                  echo SUCCESS
-                  exit 0
+                # 로컬호스트에서 헬스체크 (보안그룹 영향 없음)
+                if curl -f -s http://localhost:8080/actuator/health > /dev/null 2>&1; then
+                  echo Service is UP - checking detailed status
+                  STATUS=$(curl -s http://localhost:8080/actuator/health | jq -r .status 2>/dev/null || echo UNKNOWN)
+                  echo Health status: $STATUS
+                  if [ \"$STATUS\" = \"UP\" ]; then
+                    echo SUCCESS - Deployment completed
+                    exit 0
+                  fi
                 fi
+                echo Attempt $i/24: Service not ready yet, waiting...
               done
-
-              echo FAIL, rollback
-              cp /home/ubuntu/app-rollback.jar $APP_PATH || true
-              sudo systemctl restart $APP_NAME || true
+          
+              echo FAIL - Service did not come up in time, rolling back
+              if [ -f /home/ubuntu/app-rollback.jar ]; then
+                cp /home/ubuntu/app-rollback.jar $APP_PATH
+                sudo systemctl restart $APP_NAME
+                echo Rollback completed
+              fi
               exit 1
             "]' \
             --query "Command.CommandId" --output text)
-
+          
           echo "command_id=$CMD_ID" >> $GITHUB_OUTPUT
 
       - name: Resolve actual targets (debug)
