--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -125,30 +125,52 @@ jobs:
       - name: Wait SSM result (robust)
         run: |
           set -euo pipefail
+          
           CMD_ID="${{ steps.ssm.outputs.command_id }}"
-          TARGETS="${{ steps.resolve.outputs.targets }}"
-
-          echo "Waiting for command $CMD_ID on targets: $TARGETS"
-          # 여러 타깃일 수도 있으니 전부 성공해야 성공으로 간주
+          RAW_TARGETS='${{ steps.resolve.outputs.targets }}'
+          if [[ "$RAW_TARGETS" == \[*\] ]]; then
+          mapfile -t TARGETS < <(printf '%s' "$RAW_TARGETS" | jq -r '.[]')
+          else
+          read -r -a TARGETS <<< "$RAW_TARGETS"
+          fi
+          
+          # 2) 빈 타깃 방지
+          if [[ ${#TARGETS[@]} -eq 0 ]]; then
+          echo "::error::No SSM targets resolved."
+          exit 1
+          fi
+          
+          echo "Waiting for command $CMD_ID on targets: ${TARGETS[*]}"
+          
+           # 3) 폴링
           for i in {1..60}; do
-            ALL_OK=true
-            for T in $TARGETS; do
-              STATUS=$(aws ssm get-command-invocation \
-                --region ap-northeast-2 \
-                --command-id "$CMD_ID" \
-                --instance-id "$T" \
-                --query 'Status' --output text || echo "InvocationDoesNotExist")
-              echo "[$T] $STATUS"
-              case "$STATUS" in
-                Success) : ;;
-                Failed|Cancelled|TimedOut) exit 1 ;;
-                InvocationDoesNotExist|Pending|InProgress|Delayed)
-                  ALL_OK=false
-                  ;;
-                *) ALL_OK=false ;;
-              esac
-            done
-            $ALL_OK && exit 0
-            sleep 5
-          done
-          echo "Timed out waiting SSM"; exit 1
+          ALL_OK=true
+          for T in "${TARGETS[@]}"; do
+          STATUS=$(aws ssm get-command-invocation \
+          --region ap-northeast-2 \
+          --command-id "$CMD_ID" \
+          --instance-id "$T" \
+          --query 'Status' --output text 2>/dev/null || echo "InvocationDoesNotExist")
+          
+          echo "[$T] $STATUS"
+          
+          case "$STATUS" in
+          Success)
+           : # OK
+           ;;
+           Failed|Cancelled|TimedOut|Cancelling)
+           echo "::error::SSM invocation failed on $T with status=$STATUS"
+           exit 1
+           ;;
+           InvocationDoesNotExist|Pending|InProgress|Delayed|*)
+           ALL_OK=false
+           ;;
+           esac
+           done
+          
+           $ALL_OK && { echo "All targets succeeded."; exit 0; }
+           sleep 5
+           done
+          
+           echo "::error::Timed out waiting SSM (300s)."
+           exit 1
