--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -86,8 +86,13 @@ jobs:
               "if ! sudo systemctl is-active --quiet \"$APP_NAME\"; then echo 'Service not active right after restart; printing status/journal' >&2; sudo systemctl status \"$APP_NAME\" --no-pager -l || true; sudo journalctl -u \"$APP_NAME\" --no-pager -n 200 || true; fi",
           
               "echo Health check",
-              "sleep 5",
-              "for i in {1..30}; do sleep 5; STATUS=$(curl -s http://127.0.0.1:8080/actuator/health | jq -r .status || true); echo STATUS:$STATUS; if [ \"$STATUS\" = \"UP\" ]; then echo SUCCESS; exit 0; fi; done",
+              "sleep 10",
+              "for i in {1..30}; do",
+              "sleep 5", 
+              "STATUS=$(curl -s -f http://127.0.0.1:8080/actuator/health | jq -r .status 2>/dev/null || echo 'DOWN')",
+              "echo \"STATUS: $STATUS\"", 
+              "if [ \"$STATUS\" = \"UP\" ]; then echo SUCCESS; exit 0; fi",
+              "done",
           
               "echo FAIL, rollback",
               "cp /home/ubuntu/app-rollback.jar \"$APP_PATH\" || true",
