ci: ssm 스모크 워크플로우 경로 추가

--- a/.github/workflows/ssm-smoke.yml
+++ b/.github/workflows/ssm-smoke.yml
@@ -1,6 +1,11 @@
 name: ssm-smoke
 on:
-  workflow_dispatch: { }
+  workflow_dispatch:
+  push:
+    branches: [ infra/epic ]
+    paths:
+      - '.github/workflows/**'
+      - 'infra/**'
 
 permissions:
   id-token: write
