test: application-test.yml 추가

--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -8,6 +8,9 @@ defaults: { run: { working-directory: backend } }
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Seoul
+      SPRING_PROFILES_ACTIVE: test
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
