--- a/.github/workflows/frontend-pr.yml
+++ b/.github/workflows/frontend-pr.yml
@@ -8,6 +8,9 @@ defaults: { run: { working-directory: frontend } }
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      TZ: Asia/Seoul
+      SPRING_PROFILES_ACTIVE: test
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
