ci: PR 워크플로 트리거 수정(보완)

--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -3,7 +3,9 @@ name: backend-pr
 on:
   pull_request:
     branches: [ main ]
-
+    paths:
+      - 'backend/**'
+      - '.github/workflows/**'
 defaults:
   run:
     working-directory: backend
