ci: PR 워크플로 YAML 오류 수정(name 값 콜론 인용)

--- a/.github/workflows/frontend-pr.yml
+++ b/.github/workflows/frontend-pr.yml
@@ -11,8 +11,7 @@ defaults:
 
 jobs:
   build:
-    name:
-      frontend: build
+    name: "frontend: build"
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Seoul
