--- a/.github/workflows/backend-pr.yml
+++ b/.github/workflows/backend-pr.yml
@@ -12,8 +12,7 @@ defaults:
 
 jobs:
   test:
-    name:
-      backend: test
+    name: "backend: test"
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Seoul
