--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -73,6 +73,7 @@ jobs:
               "sudo tar -xzf /tmp/frontend.tgz -C \"$REL\"",
               "sudo chmod -R a+rX \"$REL\"",
 
+              "if [ -d \"$ROOT/current\" ] && [ ! -L \"$ROOT/current\" ]; then sudo rm -rf \"$ROOT/current\"; fi",
               "sudo ln -sfn \"$REL\" \"$ROOT/current\"",
 
               "sudo nginx -t && sudo systemctl reload nginx",
